fixed text-align

--- a/src/app/modules/core/components/company-testimonial/company-testimonial.component.scss
+++ b/src/app/modules/core/components/company-testimonial/company-testimonial.component.scss
@@ -16,7 +16,7 @@
   line-height: 20px;
   font-size: 16px;
   color: #252525;
-  text-align: left;
+  text-align: right;
   font-family: Open Sans, sans-serif;
   white-space: pre-line;
 }
